--- a/static/papers/ArXiV_learning_ffd_2018.html
+++ b/static/papers/ArXiV_learning_ffd_2018.html
@@ -16,7 +16,7 @@
 <pre class="western">@article{learningffd2018,
 title = &quot;Learning Free-Form Deformations for 3D Object Reconstruction&quot;,
 author = &quot;Dominic Jack, Jhony K. Pontes, Sridha Sridharan, Clinton Fookes, Sareh Shirazi, Frederic Maire, Anders Eriksson&quot;,
-journal = &quot;arXiv:1803.10932&quot;,
+journal = &quot;ACCV&quot;,
 pages = &quot;-&quot;,
 year = &quot;2018&quot;,
 }</pre>
