--- a/static/papers/image2mesh2017.html
+++ b/static/papers/image2mesh2017.html
@@ -16,9 +16,9 @@
 <pre class="western">@article{PontesImage2Mesh2017,
 title = &quot;Image2Mesh: A Learning Framework for Single Image 3D Reconstruction&quot;,
 author = &quot;Jhony K. Pontes and Chen Kong and Sridha Sridharan and Simon Lucey and Anders Eriksson and Clinton Fookes&quot;,
-journal = &quot;arXiv:1711.10669&quot;,
+journal = &quot;ACCV&quot;,
 pages = &quot;-&quot;,
-year = &quot;2017&quot;,
+year = &quot;2018&quot;,
 }</pre>
 </body>
 </html>
